packages/ui/src/SelectField.module.scss
@use '../styles/constants' as c;
@use '../styles/helpers' as h;

$selectHorizontalPadding: c.$grid * 3;
$menuMargin: c.$grid * 3;

$select: ':global .hz-select-field__control';

.container {
  .label {
    display: block;
    margin-bottom: c.$grid;
  }

  .errorContainer {
    margin-top: c.$grid;
  }

  .helperText {
    margin-left: c.$grid * 1.5;
    display: block;
  }

  .chevron {
    transition: 0s;
    color: c.$colorPrimary;
    margin-left: $selectHorizontalPadding;
  }
  :global .hz-select-field__control--menu-is-open :local .chevron {
    transform: rotate(180deg);
  }

  .clear {
    margin-left: $selectHorizontalPadding;
  }

  :global .hz-select-field {
    flex: 1 1 auto;

    @include c.typographyBodySmall;
  }

  :global .hz-select-field__value-container {
    padding: 0;
  }

  :global .hz-select-field__indicator-separator {
    display: none;
  }

  #{$select} {
    cursor: pointer;
    color: c.$colorText;
    min-height: c.$inputHeight;
    padding-left: c.$grid * 3;
    padding-right: c.$grid * 2;
    box-sizing: border-box;
    border: c.$borderWidth solid c.$colorNeutralLight;
    border-radius: c.$borderRadius;
    background-color: c.$colorNeutralLighter;
    transition: none;
  }

  &.disabled {
    #{$select} {
      color: c.$colorTextSecondary;
      background-color: c.$colorNeutral;
      border-color: c.$colorNeutralLight;
    }

    .chevron {
      transition: 0s;
      color: c.$colorTextSecondary;
    }
  }

  &.hasError {
    #{$select} {
      border-color: c.$colorError;
    }
  }

  // We target specifically #{$select} not to apply hover styles to the select when a helper icon is hovered
  #{$select}:hover,
  &.hover #{$select} {
    border-color: c.$colorPrimary;
    transition: none;
  }

  &.focus #{$select},
  #{$select}.hz-select-field__control--is-focused {
    @include h.outlineFormField;
  }

  .selectBlock {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: relative;

    .iconLeftContainer {
      .iconLeft {
        position: absolute;
        left: 0;
        top: 0;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
        z-index: c.$zIndex100;
        padding: 0 c.$grid * 2 0 c.$grid * 3;
      }

      & + :global(.hz-select-field) {
        #{$select} {
          padding-left: c.$grid * 10;
        }
      }
    }
  }
}

// when .isMulti is true, we have some tweaks overall
.multiContainer {
  :global .hz-select-field__value-container {
    padding: c.$grid 0;
  }

  :global .hz-select-field__value-container--has-value {
    margin-left: -1.5 * c.$grid; // padding is narrower in .multiContainer (when it has any values selected)
  }

  :global .hz-select-field__indicators {
    align-items: flex-start;
    margin-top: c.$grid * 1.6;
  }

  .multiValue {
    background-color: c.$colorNeutralWhite;
    border: c.$borderWidth solid c.$colorNeutralLight;
    border-radius: c.$borderRadius;
    height: c.$grid * 5.5; // makes 22px; design is 21px.
    overflow: hidden;
  }

  // Styles for MultiValue chips - focused state.
  // We inject `.multiValueIsFocused` from js (it does not have an actual :focused state).
  .multiValueIsFocused {
    @include h.outlineFormField;

    // override our outlineFormField inset shadow, for fixing
    // the glitch case on an hovered remove button.
    box-shadow: 0 0 0 (c.$outlineWidth - c.$borderWidth) c.$colorAccessibilityOutline;

    :global .hz-select-field__multi-value__label {
      // turn off the bogus shadow of the label
      box-shadow: none;
    }
  }

  .multiValueLabel {
    @include c.typographyBodySmall;
    @include h.overflowEllipsis;

    color: c.$colorText;
    padding: 0 c.$grid;
  }

  .multiValueRemove {
    display: flex;
    align-items: center;
    color: c.$colorPrimary;

    &:hover {
      background-color: c.$colorNeutral;
      border-color: c.$colorNeutralLight;
    }
  }

  &.disabled {
    :global .hz-select-field__multi-value--is-disabled {
      background-color: c.$colorNeutral;
    }
    .multiValueRemove {
      color: c.$colorTextSecondary;
    }
  }
}

.menuContainer {
  :global .hz-select-field__menu-portal {
    z-index: c.$zIndex2000;
  }

  :global .hz-select-field__menu {
    margin-top: $menuMargin;
    margin-bottom: $menuMargin;
    border: c.$borderWidth solid c.$colorNeutralLight;
    border-radius: c.$borderRadius;
    background-color: c.$colorNeutralLighter;
    overflow: hidden;
    box-shadow: 0 c.$selectMenuShadowSize c.$selectMenuShadowBlur 0 c.$colorShadow;
    z-index: c.$zIndex1000;

    @include c.typographyBodySmall;

    :global .hz-select-field__menu-list {
      padding: 0;
      color: c.$colorTextSecondary;
    }

    :global .hz-select-field__option,
    :global .hz-select-field__menu-notice {
      height: c.$inputHeight;
      line-height: c.$inputHeight;
      padding: 0 $selectHorizontalPadding;
      background-color: transparent;
      // Do not remove outline for high-contrast modes
      // https://stackoverflow.com/a/52616313
      outline: c.$outlineWidth solid transparent;
      text-align: left;

      &:global.hz-select-field__option--is-focused {
        @include h.outlineSimple;

        color: c.$colorText;
        background-color: c.$colorNeutral;
      }

      &:global.hz-select-field__option--is-selected {
        color: c.$colorPrimary;
      }
    }
  }

  :global .hz-select-field__group {
    padding-top: 0;
    padding-bottom: 0;
  }

  :global .hz-select-field__group-heading {
    margin-bottom: 0;
    padding-top: 2 * c.$grid;
    padding-bottom: 2 * c.$grid;
    background-color: c.$colorNeutralWhite;
    color: c.$colorTextSecondary;
    font-size: c.$fontSizeBodySmaller;
    font-weight: c.$fontWeightTextBold;
    text-transform: inherit;
  }
}

